<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_date"
        android:text="@string/default_date"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/text_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/score_in_date"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/text_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_score"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/text_history"
            android:text="@string/default_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>